crates/wac-parser/tests/resolution/fail/mismatched-func-result-name.wac
import x: interface {
    f: func() -> (a: string, c: u32);
};

let i = new foo:bar { x };
